--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Main Page</title>
+    <title>The Planet</title>
     <link rel="stylesheet" href="styles.css">
     <!-- Optional: Link to Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -13,7 +13,7 @@
         <div class="header-container">
             <div class="logo-container">
                 <i class="fas fa-globe"></i> <!-- Font Awesome globe icon -->
-                <h1 class="logo">The Planet Blog</h1>
+                <h1 class="logo">The Planet</h1>
             </div>
         </div>
     </header>
@@ -21,7 +21,7 @@
         <nav>
             <ul class="menu">
                 <li>
-                    <a href="pages/the-planet/about/about.html" target="content-frame">
+                    <a href="#/home">
                         <i class="fas fa-home"></i> Home
                     </a>
                 </li>
@@ -32,19 +32,19 @@
                     </a>
                     <ul class="submenu">
                         <li>
-                            <a href="subpage1.html" target="content-frame">
+                            <a href="#/agile">
                                 <i class="fas fa-file-alt"></i> Agile
                             </a>
                         </li>
                         <li>
-                            <a href="subpage2.html" target="content-frame">
+                            <a href="#/leadership">
                                 <i class="fas fa-file-alt"></i> Leadership
                             </a>
                         </li>
                     </ul>
                 </li>
                 <li>
-                    <a href="page3.html" target="content-frame">
+                    <a href="#/sharing">
                         <i class="fas fa-share-alt"></i> Sharing
                     </a>
                 </li>
