--- a/pages/the-planet/about/about.html
+++ b/pages/the-planet/about/about.html
@@ -2,23 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 20px;
-            color: #333;
-        }
-        h1, h2 {
-            color: #0056b3;
-        }
-        .core-values {
-            list-style-type: disc;
-            margin-left: 20px;
-        }
-    </style>
+    <title>About</title>
+    <link rel="stylesheet" href="../../pages-styles.css">
 </head>
 <body>
     <h1>About Us</h1>
