--- a/pages/the-planet/about/about.html
+++ b/pages/the-planet/about/about.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <title>About</title>
     <link rel="stylesheet" href="../../pages-styles.css">
+    <!-- Link to external JavaScript file -->
+    <script src="../../pages-scripts.js"></script>
 </head>
 <body>
+    <button id="theme-toggle" onclick="toggleDarkTheme()">Toggle Theme</button>
     <h1>About Us</h1>
     <p>Welcome to The Planet Blog! Our platform is dedicated to sharing knowledge, insights, and stories about our amazing planet. From environmental awareness to technological advancements, we aim to inspire and educate our readers.</p>
 
