--- a/pages/Reading/Agile.html
+++ b/pages/Reading/Agile.html
@@ -2,14 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Manifesto for Agile Software Development</title>
+    <title>Agile Software Development</title>
     <link rel="stylesheet" href="../pages-styles.css">
+      <!-- Link to external JavaScript file -->
+    <script src="../pages-scripts.js"></script>
 </head>
 <body>
-    <h1>Manifesto for Agile Software Development</h1>
+    <button id="theme-toggle" onclick="toggleDarkTheme()">Toggle Theme</button>
+    <h1>Agile Software Development</h1>
 
     <h2>
-        <a href="https://agilemanifesto.org/" target="_blank" rel="noopener noreferrer">4 Values</a>
+        <a href="https://agilemanifesto.org/" target="_blank" rel="noopener noreferrer">Manifesto for Agile Software Development</a>
     </h2>
     <ul>
         <li>Individuals and <b>interactions</b> over processes and tools</li>
