update about information

--- a/pages/the-planet/about/about.html
+++ b/pages/the-planet/about/about.html
@@ -9,18 +9,18 @@
 </head>
 <body>
     <button id="theme-toggle" onclick="toggleDarkTheme()">Toggle Theme</button>
-    <h1>About Us</h1>
+    <h1>About Me</h1>
     <p>Welcome to The Planet Blog! Our platform is dedicated to sharing knowledge, insights, and stories about our amazing planet. From environmental awareness to technological advancements, we aim to inspire and educate our readers.</p>
 
-    <h2>Our Vision</h2>
+    <h2>My Vision</h2>
     <p>To create a world where everyone is informed and empowered to make a positive impact on the planet.</p>
 
-    <h2>Our Core Values</h2>
+    <h2>My Core Values</h2>
     <ul class="core-values">
-        <li><strong>Integrity:</strong> We are committed to delivering accurate and trustworthy information.</li>
-        <li><strong>Innovation:</strong> We embrace creativity and forward-thinking to address global challenges.</li>
-        <li><strong>Community:</strong> We believe in the power of collaboration and shared purpose.</li>
-        <li><strong>Sustainability:</strong> We prioritize practices that protect and preserve our planet for future generations.</li>
+        <li><strong>Integrity:</strong> I am committed to delivering accurate and trustworthy information.</li>
+        <li><strong>Courage:</strong> Never give up - Be a warrior, not a worrier</li>
+        <li><strong>Community:</strong> I believe in the power of collaboration and shared purpose.</li>
+        <li><strong>Self-reflection:</strong> Taking time to analyze one's actions and identify areas for improvement, leading to better decision-making.</li>
     </ul>
 </body>
 </html>
