--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Planet</title>
+    <title>My Personal Planet</title>
     <link rel="stylesheet" href="styles.css">
     <!-- Optional: Link to Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -13,7 +13,7 @@
         <div class="header-container">
             <div class="logo-container">
                 <i class="fas fa-globe"></i> <!-- Font Awesome globe icon -->
-                <h1 class="logo">The Planet</h1>
+                <h1 class="logo">My Personal Planet </h1>
             </div>
         </div>
     </header>
