--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Optional: Link to Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
-<body >
+<body>
     <header>
         <div class="header-container">
             <div class="logo-container">
@@ -56,5 +56,6 @@
     </div>
     <!-- Link to external JavaScript file -->
     <script src="scripts.js"></script>
+    <button id="theme-toggle" style="position:absolute;top:1rem;right:1rem;">Toggle Theme</button>
 </body>
 </html>
