--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
+    <script>
+    // Set theme from saved preference as early as possible
+    (function() {
+        const theme = localStorage.getItem('theme') === 'dark' ? 'dark' : 'light';
+        if (theme === 'dark') {
+            document.body.classList.add('dark-theme');
+        } else {
+            document.body.classList.remove('dark-theme');
+        }
+    })();
+    </script>
     <header>
         <div class="header-container">
             <div class="logo-container">
@@ -56,6 +67,35 @@
     </div>
     <!-- Link to external JavaScript file -->
     <script src="scripts.js"></script>
-    <button id="theme-toggle" style="position:absolute;top:1rem;right:1rem;">Toggle Theme</button>
+    <button id="theme-toggle">Toggle Theme</button>
+    <script>
+function setTheme(theme) {
+    if (theme === 'dark') {
+        document.body.classList.add('dark-theme');
+    } else {
+        document.body.classList.remove('dark-theme');
+    }
+    // Save preference
+    localStorage.setItem('theme', theme);
+    // Tell the iframe to update its theme
+    const iframe = document.querySelector('iframe[name="content-frame"]');
+    if (iframe && iframe.contentWindow) {
+        iframe.contentWindow.postMessage({ type: 'set-theme', theme }, '*');
+    }
+}
+
+document.getElementById('theme-toggle').onclick = function() {
+    const isDark = document.body.classList.toggle('dark-theme');
+    const theme = isDark ? 'dark' : 'light';
+    setTheme(theme);
+};
+
+// On page load, set theme from saved preference and notify iframe
+window.addEventListener('DOMContentLoaded', function() {
+    const theme = localStorage.getItem('theme') === 'dark' ? 'dark' : 'light';
+    setTheme(theme);
+});
+
+</script>
 </body>
 </html>
