Add theme toggle button and styles for dark theme

--- a/index.html
+++ b/index.html
@@ -23,9 +23,12 @@
     <header>
         <div class="header-container">
             <div class="logo-container">
-                <i class="fas fa-globe"></i> <!-- Font Awesome globe icon -->
+                <i class="fas fa-globe"></i>
                 <h1 class="logo">My Personal Planet </h1>
             </div>
+            <button id="theme-toggle" class="theme-toggle" aria-label="Toggle theme">
+                <span class="slider"></span>
+            </button>
         </div>
     </header>
     <div class="container">
@@ -67,35 +70,5 @@
     </div>
     <!-- Link to external JavaScript file -->
     <script src="scripts.js"></script>
-    <button id="theme-toggle">Toggle Theme</button>
-    <script>
-function setTheme(theme) {
-    if (theme === 'dark') {
-        document.body.classList.add('dark-theme');
-    } else {
-        document.body.classList.remove('dark-theme');
-    }
-    // Save preference
-    localStorage.setItem('theme', theme);
-    // Tell the iframe to update its theme
-    const iframe = document.querySelector('iframe[name="content-frame"]');
-    if (iframe && iframe.contentWindow) {
-        iframe.contentWindow.postMessage({ type: 'set-theme', theme }, '*');
-    }
-}
-
-document.getElementById('theme-toggle').onclick = function() {
-    const isDark = document.body.classList.toggle('dark-theme');
-    const theme = isDark ? 'dark' : 'light';
-    setTheme(theme);
-};
-
-// On page load, set theme from saved preference and notify iframe
-window.addEventListener('DOMContentLoaded', function() {
-    const theme = localStorage.getItem('theme') === 'dark' ? 'dark' : 'light';
-    setTheme(theme);
-});
-
-</script>
 </body>
 </html>
