--- a/index.html
+++ b/index.html
@@ -53,7 +53,10 @@
                 </li>
             </ul>
         </nav>
-        <main>
+        <main id="main-content">
+            <button id="expand-main" class="expand-main" aria-label="Expand main">
+                <i class="fas fa-expand"></i>
+            </button>
             <iframe name="content-frame" src="pages/the-planet/about/about.html" style="width: 100%; height: 100%; border: none;"></iframe>
         </main>
     </div>
