Add sidebar toggle functionality and styles for collapsible navigation

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
     </header>
     <div class="container">
-        <nav>
+        <nav id="sidebar" class="sidebar">
             <ul class="menu">
                 <li>
                     <a href="#/home">
@@ -52,6 +52,9 @@
                     </a>
                 </li>
             </ul>
+            <button id="sidebar-toggle" class="sidebar-toggle" aria-label="Toggle sidebar">
+                <i class="fas fa-chevron-left toggle-icon"></i>
+            </button>
         </nav>
         <main id="main-content">
             <button id="expand-main" class="expand-main" aria-label="Expand main">
