Update sidebar link from "Sharing" to "Writing" and enhance About Me section with personal reflections and core values

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                     </ul>
                 </li>
                 <li>
-                    <a href="#/sharing">
-                        <i class="fas fa-share-alt"></i> Sharing
+                    <a href="#/writing">
+                        <i class="fas fa-share-alt"></i> Writing
                     </a>
                 </li>
             </ul>
