--- a/pages/the-planet/about/about.html
+++ b/pages/the-planet/about/about.html
@@ -7,17 +7,38 @@
 </head>
 <body>
     <h1>About Me</h1>
-    <p>Welcome to The Planet Blog! Our platform is dedicated to sharing knowledge, insights, and stories about our amazing planet. From environmental awareness to technological advancements, we aim to inspire and educate our readers.</p>
+    <p>
+        I am just an ordinary guy. I know I can not change the world — but I believe I can change myself.
+    </p>
+    <p>
+        Now, I want to build a little planet of my own — a place where I can store what I have learned,
+        capture what I think, and reflect on who I am becoming.
+        Bit by bit, I will grow through each idea, each thought, each experience I hold onto.
+    </p>
+    <p>
+        And maybe, one day, this little planet will reach a greater world. Maybe, from something ordinary, something extraordinary will begin.
+    </p>
 
+    <h2>My Mission</h2>
+    <p>I record what I learn and come to understand — to light the path ahead and nourish the soul within.</p>
+    
     <h2>My Vision</h2>
-    <p>To create a world where everyone is informed and empowered to make a positive impact on the planet.</p>
-
+    <p>To create a personal space that grows with me — a place to reflect, to dream, and to leave behind something meaningful.</p>
+    
     <h2>My Core Values</h2>
     <ul class="core-values">
-        <li><strong>Integrity:</strong> I am committed to delivering accurate and trustworthy information.</li>
-        <li><strong>Courage:</strong> Never give up - Be a warrior, not a worrier</li>
-        <li><strong>Community:</strong> I believe in the power of collaboration and shared purpose.</li>
-        <li><strong>Self-reflection:</strong> Taking time to analyze one's actions and identify areas for improvement, leading to better decision-making.</li>
+        <li><strong>Integrity:</strong> 
+            I am not perfect — but I strive to be someone others can trust.
+        </li>
+        <li><strong>Courage:</strong> 
+            Never give up. I choose to face challenges head-on — to be a warrior, not a worrier.
+        </li>
+        <li><strong>Collaboration:</strong> 
+            I believe in the power of working together. Shared goals, open minds, and mutual respect create something greater than what we can build alone.
+        </li>
+        <li><strong>Self-reflection:</strong> 
+            I make time to pause, look inward, and understand my actions. Through reflection, I discover where I can grow — and how to make better decisions moving forward.
+        </li>
     </ul>
     <!-- Link to external JavaScript file -->
     <script src="../../pages-scripts.js"></script>
