--- a/pages/Reading/Agile/Agile.html
+++ b/pages/Reading/Agile/Agile.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Agile Software Development</title>
-    <link rel="stylesheet" href="../pages-styles.css">
+    <link rel="stylesheet" href="../../pages-styles.css">
 </head>
 <body>
     <h1>Agile Software Development</h1>
@@ -49,6 +49,6 @@
         <li>At regular intervals, the team reflects on how to <b>become more effective</b>, then tunes and adjusts its behavior accordingly.</li>
     </ol>
     <!-- Link to external JavaScript file -->
-    <script src="../pages-scripts.js"></script>
+    <script src="../../pages-scripts.js"></script>
 </body>
 </html>
