Update navigation links with data-route attributes and implement route loading functionality

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <nav id="sidebar" class="sidebar">
             <ul class="menu">
                 <li>
-                    <a href="#/home">
+                    <a href="#/home" data-route="pages/the-planet/about/about.html">
                         <i class="fas fa-home"></i> Home
                     </a>
                 </li>
@@ -35,20 +35,20 @@
                     </a>
                     <ul class="submenu">
                         <li>
-                            <a href="#/agile">
+                            <a href="#/agile" data-route="pages/Reading/Agile/Agile.html">
                                 <i class="fas fa-file-alt"></i> Agile
                             </a>
                         </li>
                         <li>
-                            <a href="#/leadership">
+                            <a href="#/leadership" data-route="subpage2.html">
                                 <i class="fas fa-file-alt"></i> Leadership
                             </a>
                         </li>
                     </ul>
                 </li>
                 <li>
-                    <a href="#/writing">
-                        <i class="fas fa-share-alt"></i> Writing
+                    <a href="#/sharing" data-route="page3.html">
+                        <i class="fas fa-share-alt"></i> Sharing
                     </a>
                 </li>
             </ul>
