Add Agile Software Development page with content and update navigation structure

--- a/index.html
+++ b/index.html
@@ -34,13 +34,26 @@
                         <i class="fas fa-chevron-down toggle-icon"></i>
                     </a>
                     <ul class="submenu">
-                        <li>
-                            <a href="#/agile" data-route="pages/Reading/Agile/Agile.html">
-                                <i class="fas fa-file-alt"></i> Agile
+                        <li class="has-submenu">
+                            <a href="#">
+                                <i class="fas fa-folder"></i> Agile
+                                <i class="fas fa-chevron-down toggle-icon"></i>
                             </a>
+                            <ul class="submenu">
+                                <li>
+                                    <a href="#/agile-manifesto" data-route="pages/reading-studying/agile-software-development/agile-software-development.html">
+                                        <i class="fas fa-file-code"></i> Agile Manifesto
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#/scrum" data-route="pages/reading-studying/agile-software-development/scrum.html">
+                                        <i class="fas fa-project-diagram"></i> Scrum
+                                    </a>
+                                </li>
+                            </ul>
                         </li>
                         <li>
-                            <a href="#/leadership" data-route="subpage2.html">
+                            <a href="#/leadership" data-route="pages/reading-studying/leadership/leadership.html">
                                 <i class="fas fa-file-alt"></i> Leadership
                             </a>
                         </li>
