Update sidebar navigation with new sections for Writing and Leadership, and relocate Personal Values Creation page

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </li>
                 <li class="has-submenu">
                     <a href="#">
-                        <i class="fas fa-book"></i> Reading
+                        <i class="fas fa-book"></i> Reading and Studying
                         <i class="fas fa-chevron-down toggle-icon"></i>
                     </a>
                     <ul class="submenu">
@@ -42,27 +42,43 @@
                             <ul class="submenu">
                                 <li>
                                     <a href="#/agile-manifesto" data-route="pages/reading-studying/agile-software-development/agile-software-development.html">
-                                        <i class="fas fa-file-code"></i> Agile Manifesto
+                                        <i class="fas fa-file-alt"></i> Agile Manifesto
                                     </a>
                                 </li>
                                 <li>
                                     <a href="#/scrum" data-route="pages/reading-studying/agile-software-development/scrum.html">
-                                        <i class="fas fa-project-diagram"></i> Scrum
+                                        <i class="fas fa-file-alt"></i> Scrum
                                     </a>
                                 </li>
                             </ul>
                         </li>
+                        <li class="has-submenu">
+                            <a href="#">
+                                <i class="fas fa-folder"></i> Leadership
+                                <i class="fas fa-chevron-down toggle-icon"></i>
+                            </a>
+                            <ul class="submenu">
+                                <li>
+                                    <a href="#/leadership" data-route="pages/reading-studying/leadership/leadership.html">
+                                        <i class="fas fa-file-alt"></i> Leadership
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>   
+                <li class="has-submenu">
+                    <a href="#">
+                        <i class="fas fa-folder"></i> Writing and Opinion
+                        <i class="fas fa-chevron-down toggle-icon"></i>
+                    </a>
+                    <ul class="submenu">
                         <li>
-                            <a href="#/leadership" data-route="pages/reading-studying/leadership/leadership.html">
-                                <i class="fas fa-file-alt"></i> Leadership
+                            <a href="#/personal-values-creation" data-route="pages/writing-opinion/personal-values-creation.html">
+                                <i class="fas fa-file-alt"></i> Personal Values Creation
                             </a>
                         </li>
                     </ul>
-                </li>
-                <li>
-                    <a href="#/sharing" data-route="page3.html">
-                        <i class="fas fa-share-alt"></i> Sharing
-                    </a>
                 </li>
             </ul>
             <button id="sidebar-toggle" class="sidebar-toggle" aria-label="Toggle sidebar">
