--- a/pages/reading-studying/agile-software-development/scrum.html
+++ b/pages/reading-studying/agile-software-development/scrum.html
@@ -1,1 +1,257 @@
-#scrum
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Agile Software Development</title>
+    <link rel="stylesheet" href="../../pages-styles.css">
+</head>
+<body>
+    <h1>Scrum</h1>
+
+    <section>
+        <h2>Scrum Definition</h2>
+        <p>Scrum is a lightweight framework that helps people, teams and organizations generate value through adaptive solutions for complex problems.</p>
+        <p>In a nutshell, Scrum requires a Scrum Master to foster an environment where:</p>
+        <ol>
+            <li>A Product Owner orders the work for a complex problem into a Product Backlog.</li>
+            <li>The Scrum Team turns a selection of the work into an Increment of value during a Sprint.</li>
+            <li>The Scrum Team and its stakeholders inspect the results and adjust for the next Sprint.</li>
+            <li>Repeat</li>
+        </ol>
+    </section>
+
+    <section>
+        <h2>Scrum Theory</h2>
+        <ul>
+            <li>Scrum is founded on empiricism and lean thinking.</li>
+            <li>Scrum pillars: transparency, inspection, and adaptation.</li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>Scrum Values</h2>
+        <p>Commitment, Focus, Openness, Respect, and Courage</p>
+    </section>
+
+    <section>
+        <h2>Scrum Team</h2>
+        <ul>
+            <li>One Scrum Master, one Product Owner, and Developers</li>
+            <li>There are no sub-teams or hierarchies</li>
+            <li>Scrum Teams are cross-functional</li>
+            <li>Typically 10 or fewer people</li>
+        </ul>
+
+        <h3>Developers</h3>
+        <p>Developers are always accountable for:</p>
+        <ul>
+            <li>Creating a plan for the Sprint, the Sprint Backlog;</li>
+            <li>Instilling quality by adhering to a Definition of Done;</li>
+            <li>Adapting their plan each day toward the Sprint Goal; and,</li>
+            <li>Holding each other accountable as professionals</li>
+        </ul>
+
+        <h3>Product Owner</h3>
+        <p>The Product Owner is also accountable for effective Product Backlog management, which includes:</p>
+        <ul>
+            <li>Developing and explicitly communicating the Product Goal;</li>
+            <li>Creating and clearly communicating Product Backlog items;</li>
+            <li>Ordering Product Backlog items; and,</li>
+            <li>Ensuring that the Product Backlog is transparent, visible and understood</li>
+        </ul>
+
+        <h3>Scrum Master</h3>
+        <p><strong>The Scrum Master serves the Scrum Team in several ways, including:</strong></p>
+        <ul>
+            <li>Coaching the team members in self-management and cross-functionality;</li>
+            <li>Helping the Scrum Team focus on creating high-value Increments that meet the Definition of Done;</li>
+            <li>Causing the removal of impediments to the Scrum Team's progress; and,</li>
+            <li>Ensuring that all Scrum events take place and are positive, productive, and kept within the timebox.</li>
+        </ul>
+
+        <p><strong>The Scrum Master serves the Product Owner in several ways, including:</strong></p>
+        <ul>
+            <li>Helping find techniques for effective Product Goal definition and Product Backlog management;</li>
+            <li>Helping the Scrum Team understand the need for clear and concise Product Backlog items;</li>
+            <li>Helping establish empirical product planning for a complex environment; and,</li>
+            <li>Facilitating stakeholder collaboration as requested or needed.</li>
+        </ul>
+
+        <p><strong>The Scrum Master serves the organization in several ways, including:</strong></p>
+        <ul>
+            <li>Leading, training, and coaching the organization in its Scrum adoption;</li>
+            <li>Planning and advising Scrum implementations within the organization;</li>
+            <li>Helping employees and stakeholders understand and enact an empirical approach for complex work; and,</li>
+            <li>Removing barriers between stakeholders and Scrum Teams.</li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>Scrum Events</h2>
+
+        <h3>The Sprint</h3>
+        <p>During the Sprint:</p>
+        <ul>
+            <li>No changes are made that would endanger the Sprint Goal;</li>
+            <li>Quality does not decrease;</li>
+            <li>The Product Backlog is refined as needed; and,</li>
+            <li>Scope may be clarified and renegotiated with the Product Owner as more is learned.</li>
+        </ul>
+        <p>A Sprint could be cancelled if the Sprint Goal becomes obsolete. Only the Product Owner has the authority to cancel the Sprint.</p>
+
+        <h3>Sprint Planning</h3>
+        <ul>
+            <li><strong>Topic One:</strong> Why is this Sprint valuable?</li>
+            <li><strong>Topic Two:</strong> What can be Done this Sprint?</li>
+            <li><strong>Topic Three:</strong> How will the chosen work get done?</li>
+        </ul>
+
+        <h3>Daily Scrum</h3>
+        <ul>
+            <li>Inspect progress toward the Sprint Goal;</li>
+            <li>Adapt the Sprint Backlog as necessary, adjusting the upcoming planned work;</li>
+            <li>Optimize team collaboration and performance;</li>
+            <li>Focus on creating a plan for the next 24 hours;</li>
+            <li>Keep the event within the 15-minute time-box.</li>
+            <li>The Developers are accountable for conducting the Daily Scrum.</li>
+            <li>The Scrum Master ensures that the Developers have the meeting, but the Developers are the ones who actually conduct the Daily Scrum.</li>
+            <li>The Daily Scrum is recommended (not required) to be held at the same time and place each day to reduce complexity.</li>
+            <li>The Daily Scrum improves communications, identifies impediments, promotes quick decision-making, and consequently eliminates the need for other meetings.</li>
+            <li>During the Daily Scrum, the Developers can select whatever structure and techniques they want, as long as their Daily Scrum focuses on progress toward the Sprint Goal and produces an actionable plan for the next day of work.</li>   
+            <li>Common ways (not always) to conduct the Daily Scrum include: the three questions (What did I do yesterday? What will I do today? Do I see any impediment?), walk the board, or discuss the Sprint Goal.</li>
+        </ul>
+
+        <h3>Sprint Review</h3>
+        <ul>
+            <li>Inspect the outcome of the Sprint;</li>
+            <li>Determine future adaptations;</li>
+            <li>The Scrum Team presents the results of their work to key stakeholders and progress toward the Product Goal;</li>
+            <li>The entire Scrum Team collaborates on what to do next, so that the Sprint Review provides valuable input to subsequent Sprint Planning;</li>
+            <li>The Sprint Review is held at the end of the Sprint and is time-boxed to a maximum of four hours for a one-month Sprint. For shorter Sprints, the event is usually shorter.</li>
+            <li>The Scrum Master ensures that the event takes place and that attendees understand its purpose;</li>
+        </ul>
+
+        <h3>Sprint Retrospective</h3>
+        <ul>
+            <li>Inspect how the last Sprint went with regards to people, relationships, process, and tools;</li>
+            <li>Identify and order the major items that went well and potential improvements;</li>
+            <li>Create a plan for implementing improvements to the way the Scrum Team does its work;</li>
+            <li>The Sprint Retrospective is time-boxed to a maximum of three hours for a one-month Sprint. For shorter Sprints, the event is usually shorter.</li>
+            <li>The Scrum Master ensures that the event takes place and that attendees understand its purpose;</li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>Scrum Artifacts</h2>
+
+        <h3>Product Backlog</h3>
+        <ul>
+            <li>Ordered list of everything that is known to be needed in the product;</li>
+            <li>Single source of requirements for any changes to be made to the product;</li>
+            <li>Constantly evolving to identify what the product needs to be appropriate, competitive, and useful;</li>
+            <li>Highly emergent, dynamic, and fluid;</li>
+            <li>Product Owner is accountable for the Product Backlog, including its content, availability, and ordering;</li>
+        </ul>
+
+        <h3>Sprint Backlog</h3>
+        <ul>
+            <li>Set of Product Backlog items selected for the Sprint, plus a plan for delivering the product Increment and realizing the Sprint Goal;</li>
+            <li>Make visible all the work that the Developers identify as necessary to meet the Sprint Goal;</li>
+            <li>The Sprint Backlog is a plan with enough detail that changes in progress can be understood in the Daily Scrum;</li>
+            <li>The Sprint Backlog is updated throughout the Sprint as more is learned;</li>
+            <li>During the Sprint, the Developers modify the Sprint Backlog as they learn more about the work needed to achieve the Sprint Goal;</li>
+            <li>The Sprint Backlog is a highly visible, real-time picture of the work that the Developers plan to accomplish during the Sprint, and it belongs solely to the Developers.</li>
+            <li>The Sprint Backlog is updated throughout the Sprint as more is learned;</li>
+            <li>The Sprint Backlog is composed of the Sprint Goal (why), the set of Product Backlog items selected for the Sprint (what), as well as an actionable plan for delivering the Increment (how).</li>
+        </ul>
+
+        <h3>Increment</h3>
+        <ul>
+            <li>Sum of all the Product Backlog items completed during a Sprint and the value of the increments of all previous Sprints;</li>
+            <li>Must be in usable condition regardless of whether the Product Owner decides to release it;</li>
+            <li>Each Increment is additive to all prior Increments and thoroughly verified, ensuring that all Increments work together;</li>
+            <li>The Scrum Team must ensure that the Definition of Done is met for the Increment;</li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>Scrum Glossary</h2>
+        <p>For a comprehensive glossary of Scrum terms, visit: <a href="https://www.scrum.org/resources/scrum-glossary" target="_blank">https://www.scrum.org/resources/scrum-glossary</a></p>
+    </section>
+
+    <section>
+        <h2>Agile, Rapid, and Lean</h2>
+        <p>Succeeding with Agile and Scrum requires being rapid and lean.</p>
+    </section>
+
+    <section>
+        <h2>The Relationship Between Agile and Scrum</h2>
+        <p>Agile Mindset → Agile Values → Agile Principles → Practice (Scrum)</p>
+    </section>
+
+    <section>
+        <h2>The Cone of Uncertainty</h2>
+        <p><strong>VUCA:</strong></p>
+        <ul>
+            <li>Volatility → Vision</li>
+            <li>Uncertainty → Understanding</li>
+            <li>Complexity → Clarity</li>
+            <li>Ambiguity → Agility</li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>Other Scrum Concepts</h2>
+        <ul>
+            <li><strong>Product Goal: </strong> 
+                The Product Goal is an objective for the Scrum Team to achieve in the future. It provides a long-term direction for the Scrum Team and is a commitment in the Product Backlog.
+            </li>
+            <li><strong>User Story:</strong>
+                A User Story is a short, simple description of a feature told from the perspective of the person who desires the new capability, usually a user or customer of the system. It typically follows the format: "As a [type of user], I want [an action] so that [a benefit/a value]."
+            </li>
+            <li><strong>Ordering the Product Backlog:</strong>
+                The Product Owner is responsible for ordering the items in the Product Backlog to best achieve goals and missions. This involves considering factors such as value, risk, priority, and dependencies.
+            </li>
+            <li><strong>Sizing the Product Backlog Items:</strong>
+                Sizing Product Backlog items is the process of estimating the effort required to complete each item. This helps the Scrum Team plan and prioritize work effectively.
+            </li>
+            <li><strong>Story Point:</strong>
+                A Story Point is a unit of measure for expressing the overall effort required to fully implement a Product Backlog item or any other piece of work. Story Points are typically based on complexity, risk, and effort rather than time.
+            </li>
+            <li><strong>Planning Poker:</strong>
+                Planning Poker is a consensus-based technique for estimating the effort or relative size of development goals in software development. It involves the Scrum Team using numbered cards to vote on estimates.
+            </li>
+            <li><strong>Product Backlog Refinement:</strong>
+                Product Backlog Refinement is the ongoing process of reviewing and updating the Product Backlog items to ensure they are well understood, appropriately detailed, and prioritized.
+            </li>
+            <li><strong>The Definition of "Ready":</strong>
+                The Definition of "Ready" is a set of criteria that a Product Backlog item must meet before the Scrum Team can consider it for inclusion in a Sprint. This ensures that items are sufficiently understood and actionable.
+            </li>
+            <li><strong>The Definition of "Done":</strong> 
+                The Definition of "Done" is a shared understanding within the Scrum Team of what it means for work to be complete. It ensures transparency and quality by setting clear criteria that must be met before a Product Backlog item is considered done.
+            </li>
+            <li><strong>Burn-down Chart:</strong>
+                A Burn-down Chart is a visual representation of the work remaining versus time in a Sprint. It helps the Scrum Team track progress toward completing the Sprint Goal.
+            </li>
+            <li><strong>Burn-up Chart:</strong>
+                A Burn-up Chart is a visual representation of the work completed versus total work in a project. It helps track progress and scope changes over time.
+            </li>
+            <li><strong>Cumulative Flow Diagram:</strong> 
+                A Cumulative Flow Diagram is a visual tool that shows the status of work items in a process over time. It helps identify bottlenecks and monitor workflow efficiency.
+            </li>
+            <li><strong>Technical Debt:</strong> 
+                Technical Debt refers to the implied cost of additional rework caused by choosing an easy solution now instead of using a better approach that would take longer. It can accumulate and impact the quality and maintainability of the product.
+            </li>
+            <li><strong>Sprint Goal:</strong>
+                 During Sprint Planning, the whole Scrum Team collaborates to define a Sprint Goal that communicates why the Sprint is valuable to stakeholders.
+            </li>
+            <li><strong>Canceling a Sprint:</strong> 
+                A Sprint can be canceled if the Sprint Goal becomes obsolete. Only the Product Owner has the authority to cancel the Sprint.
+            </li>
+        </ul>
+    </section>
+
+    <!-- Link to external JavaScript file -->
+    <script src="../../pages-scripts.js"></script>
+</body>
+</html>
