Add outlines for values creation

--- a/pages/reading-studying/agile-software-development/scrum.html
+++ b/pages/reading-studying/agile-software-development/scrum.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Agile Software Development</title>
+    <title>Scrum</title>
     <link rel="stylesheet" href="../../pages-styles.css">
 </head>
 <body>
