update style personal-values-creation

--- a/pages/writing-opinion/personal-values-creation.html
+++ b/pages/writing-opinion/personal-values-creation.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Values Creation</title>
-    <link rel="stylesheet" href="../../pages-styles.css">
+    <link rel="stylesheet" href="../pages-styles.css">
 </head>
 <body>
     <h1>Values Creation</h1>
@@ -170,7 +170,7 @@
         <p>Value lies in the process, not just the results.</p>
     </section>
 
-    <!-- Link to external JavaScript file -->
-    <script src="../../pages-scripts.js"></script>
+   <!-- Link to external JavaScript file -->
+    <script src="../pages-scripts.js"></script>
 </body>
 </html>
