Add leadership resources: coaching, decision-making, delegation, time management, assessment skills, and checklist pages

--- a/index.html
+++ b/index.html
@@ -63,6 +63,36 @@
                                         <i class="fas fa-file-alt"></i> Leadership
                                     </a>
                                 </li>
+                                <li>
+                                    <a href="#/coaching" data-route="pages/reading-studying/leadership/coaching.html">
+                                        <i class="fas fa-file-alt"></i> Coaching
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#/decision-making" data-route="pages/reading-studying/leadership/decision-making.html">
+                                        <i class="fas fa-file-alt"></i> Decision-making
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#/delegation" data-route="pages/reading-studying/leadership/delegation.html">
+                                        <i class="fas fa-file-alt"></i> Delegation
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#/time-management" data-route="pages/reading-studying/leadership/time-management.html">
+                                        <i class="fas fa-file-alt"></i> Time-management
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#/assessment-leadership-skills" data-route="pages/reading-studying/leadership/assessment-leadership-skills.html">
+                                        <i class="fas fa-file-alt"></i> Assessment Leadership Skills
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#/check-list" data-route="pages/reading-studying/leadership/check-list.html">
+                                        <i class="fas fa-file-alt"></i> Check List
+                                    </a>
+                                </li>
                             </ul>
                         </li>
                     </ul>
