--- a/index.html
+++ b/index.html
@@ -95,6 +95,19 @@
                                 </li>
                             </ul>
                         </li>
+                        <li class="has-submenu">
+                            <a href="#">
+                                <i class="fas fa-folder"></i> PMBOK Guide
+                                <i class="fas fa-chevron-down toggle-icon"></i>
+                            </a>
+                            <ul class="submenu">
+                                <li>
+                                    <a href="#/pmbok-introduction" data-route="pages/reading-studying/pmbok-guide/introduction.html">
+                                        <i class="fas fa-file-alt"></i> Introduction
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
                     </ul>
                 </li>   
                 <li class="has-submenu">
