--- a/index.html
+++ b/index.html
@@ -21,111 +21,125 @@
         </div>
     </header>
     <div class="container">
-        <nav id="sidebar" class="sidebar">
-            <ul class="menu">
-                <li>
-                    <a href="#/home" data-route="pages/the-planet/about/about.html">
-                        <i class="fas fa-home"></i> Home
+        <nav id="sidebar" class="sidebar" aria-label="Primary">
+            <ul class="menu" role="menu">
+                <li role="none">
+                    <a role="menuitem" href="#/home" data-route="pages/the-planet/about/about.html">
+                        <i class="fas fa-home" aria-hidden="true"></i> Home
                     </a>
                 </li>
-                <li class="has-submenu">
-                    <a href="#">
-                        <i class="fas fa-book"></i> Reading and Studying
-                        <i class="fas fa-chevron-down toggle-icon"></i>
-                    </a>
-                    <ul class="submenu">
-                        <li class="has-submenu">
-                            <a href="#">
-                                <i class="fas fa-folder"></i> Agile
-                                <i class="fas fa-chevron-down toggle-icon"></i>
-                            </a>
-                            <ul class="submenu">
-                                <li>
-                                    <a href="#/agile-manifesto" data-route="pages/reading-studying/agile-software-development/agile-software-development.html">
-                                        <i class="fas fa-file-alt"></i> Agile Manifesto
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#/scrum" data-route="pages/reading-studying/agile-software-development/scrum.html">
-                                        <i class="fas fa-file-alt"></i> Scrum
-                                    </a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="has-submenu">
-                            <a href="#">
-                                <i class="fas fa-folder"></i> Leadership
-                                <i class="fas fa-chevron-down toggle-icon"></i>
-                            </a>
-                            <ul class="submenu">
-                                <li>
-                                    <a href="#/leadership" data-route="pages/reading-studying/leadership/leadership.html">
-                                        <i class="fas fa-file-alt"></i> Leadership
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#/coaching" data-route="pages/reading-studying/leadership/coaching.html">
-                                        <i class="fas fa-file-alt"></i> Coaching
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#/decision-making" data-route="pages/reading-studying/leadership/decision-making.html">
-                                        <i class="fas fa-file-alt"></i> Decision-making
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#/delegation" data-route="pages/reading-studying/leadership/delegation.html">
-                                        <i class="fas fa-file-alt"></i> Delegation
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#/time-management" data-route="pages/reading-studying/leadership/time-management.html">
-                                        <i class="fas fa-file-alt"></i> Time-management
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#/assessment-leadership-skills" data-route="pages/reading-studying/leadership/assessment-leadership-skills.html">
-                                        <i class="fas fa-file-alt"></i> Assessment Leadership Skills
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#/check-list" data-route="pages/reading-studying/leadership/check-list.html">
-                                        <i class="fas fa-file-alt"></i> Check List
-                                    </a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="has-submenu">
-                            <a href="#">
-                                <i class="fas fa-folder"></i> PMBOK Guide
-                                <i class="fas fa-chevron-down toggle-icon"></i>
-                            </a>
-                            <ul class="submenu">
-                                <li>
-                                    <a href="#/pmbok-introduction" data-route="pages/reading-studying/pmbok-guide/introduction.html">
-                                        <i class="fas fa-file-alt"></i> Introduction
-                                    </a>
-                                </li>
-                            </ul>
-                        </li>
-                    </ul>
-                </li>   
-                <li class="has-submenu">
-                    <a href="#">
-                        <i class="fas fa-folder"></i> Writing and Opinion
-                        <i class="fas fa-chevron-down toggle-icon"></i>
-                    </a>
-                    <ul class="submenu">
-                        <li>
-                            <a href="#/personal-values-creation" data-route="pages/writing-opinion/personal-values-creation.html">
-                                <i class="fas fa-file-alt"></i> Personal Values Creation
-                            </a>
-                        </li>
-                    </ul>
+
+                <li role="none">
+                    <details class="submenu-group" open>
+                        <summary class="submenu-summary">
+                            <i class="fas fa-book" aria-hidden="true"></i>
+                            <span>Reading and Studying</span>
+                        </summary>
+                        <ul class="submenu" role="menu">
+                            <li role="none">
+                                <details class="submenu-group">
+                                    <summary class="submenu-summary">
+                                        <i class="fas fa-folder" aria-hidden="true"></i>
+                                        <span>Agile</span>
+                                    </summary>
+                                    <ul class="submenu" role="menu">
+                                        <li role="none">
+                                            <a role="menuitem" href="#/agile-manifesto" data-route="pages/reading-studying/agile-software-development/agile-software-development.html">
+                                                <i class="fas fa-file-alt" aria-hidden="true"></i> Agile Manifesto
+                                            </a>
+                                        </li>
+                                        <li role="none">
+                                            <a role="menuitem" href="#/scrum" data-route="pages/reading-studying/agile-software-development/scrum.html">
+                                                <i class="fas fa-file-alt" aria-hidden="true"></i> Scrum
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </details>
+                            </li>
+
+                            <li role="none">
+                                <details class="submenu-group">
+                                    <summary class="submenu-summary">
+                                        <i class="fas fa-folder" aria-hidden="true"></i>
+                                        <span>Leadership</span>
+                                    </summary>
+                                    <ul class="submenu" role="menu">
+                                        <li role="none">
+                                            <a role="menuitem" href="#/leadership" data-route="pages/reading-studying/leadership/leadership.html">
+                                                <i class="fas fa-file-alt" aria-hidden="true"></i> Leadership
+                                            </a>
+                                        </li>
+                                        <li role="none">
+                                            <a role="menuitem" href="#/coaching" data-route="pages/reading-studying/leadership/coaching.html">
+                                                <i class="fas fa-file-alt" aria-hidden="true"></i> Coaching
+                                            </a>
+                                        </li>
+                                        <li role="none">
+                                            <a role="menuitem" href="#/decision-making" data-route="pages/reading-studying/leadership/decision-making.html">
+                                                <i class="fas fa-file-alt" aria-hidden="true"></i> Decision-making
+                                            </a>
+                                        </li>
+                                        <li role="none">
+                                            <a role="menuitem" href="#/delegation" data-route="pages/reading-studying/leadership/delegation.html">
+                                                <i class="fas fa-file-alt" aria-hidden="true"></i> Delegation
+                                            </a>
+                                        </li>
+                                        <li role="none">
+                                            <a role="menuitem" href="#/time-management" data-route="pages/reading-studying/leadership/time-management.html">
+                                                <i class="fas fa-file-alt" aria-hidden="true"></i> Time-management
+                                            </a>
+                                        </li>
+                                        <li role="none">
+                                            <a role="menuitem" href="#/assessment-leadership-skills" data-route="pages/reading-studying/leadership/assessment-leadership-skills.html">
+                                                <i class="fas fa-file-alt" aria-hidden="true"></i> Assessment Leadership Skills
+                                            </a>
+                                        </li>
+                                        <li role="none">
+                                            <a role="menuitem" href="#/check-list" data-route="pages/reading-studying/leadership/check-list.html">
+                                                <i class="fas fa-file-alt" aria-hidden="true"></i> Check List
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </details>
+                            </li>
+
+                            <li role="none">
+                                <details class="submenu-group">
+                                    <summary class="submenu-summary">
+                                        <i class="fas fa-folder" aria-hidden="true"></i>
+                                        <span>PMBOK Guide</span>
+                                    </summary>
+                                    <ul class="submenu" role="menu">
+                                        <li role="none">
+                                            <a role="menuitem" href="#/pmbok-introduction" data-route="pages/reading-studying/pmbok-guide/introduction.html">
+                                                <i class="fas fa-file-alt" aria-hidden="true"></i> Introduction
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </details>
+                            </li>
+                        </ul>
+                    </details>
+                </li>
+
+                <li role="none">
+                    <details class="submenu-group">
+                        <summary class="submenu-summary">
+                            <i class="fas fa-folder" aria-hidden="true"></i>
+                            <span>Writing and Opinion</span>
+                        </summary>
+                        <ul class="submenu" role="menu">
+                            <li role="none">
+                                <a role="menuitem" href="#/personal-values-creation" data-route="pages/writing-opinion/personal-values-creation.html">
+                                    <i class="fas fa-file-alt" aria-hidden="true"></i> Personal Values Creation
+                                </a>
+                            </li>
+                        </ul>
+                    </details>
                 </li>
             </ul>
             <button id="sidebar-toggle" class="sidebar-toggle" aria-label="Toggle sidebar">
-                <i class="fas fa-chevron-left toggle-icon"></i>
+                <i class="fas fa-chevron-left toggle-icon" aria-hidden="true"></i>
             </button>
         </nav>
         <main id="main-content">
